(fix): resolves banner whitespace

--- a/plugins/groups/app/stylesheets/groups.scss
+++ b/plugins/groups/app/stylesheets/groups.scss
@@ -7,6 +7,7 @@
   }
   &.group-card{
     padding-bottom:$minds-padding*2;
+    min-height:0;
   }
 }
 .members-grid{
